# portfolio-agent

./: .gitignore  LICENSE  README.md  agents.py  api.py  client.py  correlation.py  harness.py  loss_floor.py  models.py  pricing.py  pyproject.toml  report.py  risk.py  tools.py
server/: __init__.py  architecture.md  jobs.py  main.py  routes.py  runner.py  schemas.py  storage.py
viz/: README.md  ui_designer.py
whatif/: README.md  VERIFICATION.md  whatif.py
